--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>India.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Swimmimg</p>
+      <p>Playing Badminton</p>
       <h1>What's your dream job?</h1>
       <p>To become a software developer</p>
       <h1>Where do you live?</h1>
