--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Playing Badminton</p>
       <h1>What's your dream job?</h1>
-      <p>To become a software developer</p>
+      <p>To become a software developer.</p>
       <h1>Where do you live?</h1>
       <p>Toronto Canada</p>
       <h1>Why do you want to be a web developer?</h1>
